CSS + static update

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<title>TPB Proxy by Serbian Pirates</title>
 	<meta name="description" content="Download music, movies, games, software and much more. The Pirate Bay is the world's largest bittorrent tracker.">
 	<meta name="keywords" content="mp3, avi, bittorrent, piratebay, pirate bay, proxy, torrent, torrents, movies, music, games, applications, apps, download, upload, share, kopimi, magnets, magnet">
-	<link rel="search" type="application/opensearchdescription+xml" href="http://anonymous.rs/static/opensearch.xml" title="Search The Pirate Bay">
+	<link rel="search" type="application/opensearchdescription+xml" href="http://anonymous.rs/static/opensearch.xml" title="Search TPB ANONYMOUS.RS PROXY">
 	<!--[if lt IE 9]>
 		<link rel="stylesheet" href="/static/css5/ie.css">
 		<script src="/static/js/html5_for_ie.js"></script>
