--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
 		<a href="http://bayimg.com" title="BayImg" rel="nofollow" target="_blank">BayImg</a> | 
 		<a href="http://pastebay.com" title="PasteBay" rel="nofollow" target="_blank">PasteBay</a> | 
 		<a href="https://www.ipredator.se" title="IPREDator" rel="nofollow" target="_blank">IPREDator</a> | 
-		<a href="https://www.facebook.com/ThePirateBayWarMachine" rel="nofollow" title="Follow TPB on Facebook" target="_blank">Pratite TPB na Facebook-u</a>
+		<a href="https://www.facebook.com/ThePirateBayWarMachine" rel="nofollow" title="Follow TPB on Facebook" target="_blank">Follow TPB on Facebook</a>
 	</nav>
 	<div id="icons">
 		<br/><a href="http://www.kopimi.com/kopimi" rel="nofollow" target="_blank" title="Kopimi" class="sp kopimi"><span>Kopimi</span></a><br/><br/>
