--- a/home.html
+++ b/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>TPB Proxy by Serbian Pirates</title>
+	<title>TPB Proxy</title>
 	<meta name="description" content="Download music, movies, games, software and much more. The Pirate Bay is the world's largest bittorrent tracker.">
 	<meta name="keywords" content="mp3, avi, bittorrent, piratebay, pirate bay, proxy, torrent, torrents, movies, music, games, applications, apps, download, upload, share, kopimi, magnets, magnet">
-	<link rel="search" type="application/opensearchdescription+xml" href="http://anonymous.rs/static/opensearch.xml" title="Search TPB ANONYMOUS.RS PROXY">
+	<link rel="search" type="application/opensearchdescription+xml" href="https://tpbproxy.se/opensearch.xml" title="Search TPB PROXY">
 	<!--[if lt IE 9]>
 		<link rel="stylesheet" href="/static/css5/ie.css">
 		<script src="/static/js/html5_for_ie.js"></script>
@@ -99,7 +99,7 @@
 		<strong>Search Torrents</strong> |
 		<a href="/browse" title="Browse Torrents">Browse Torrents</a> |
 		<a href="/recent" title="Recent Torrents">Recent Torrents</a> |
-		<a href="/tv" title="TV shows">TV shows</a> | 
+		<a href="/tv" title="TV shows">TV shows</a> |
 		<a href="/music" title="Music">Music</a> |
 		<a href="/top" title="Top 100">Top 100</a>
 	</nav>
@@ -134,26 +134,25 @@
 </div>
 <footer>
 	<nav>
-		<a href="/about" rel="nofollow" title="About">About</a> | 
-		<a href="/legal" rel="nofollow" title="Legal threats">Legal threats</a> | 
-		<a href="/policy" rel="nofollow" title="Usage polic">Usage policy</a> | 
-		<a href="/blog" title="Blog">Blog</a> | 
-		<a href="http://www.piratskapartija.com/" rel="nofollow" target="_blank">Piratska Partija</a>
+		<a href="/about" rel="nofollow" title="About">About</a> |
+		<a href="/legal" rel="nofollow" title="Legal threats">Legal threats</a> |
+		<a href="/policy" rel="nofollow" title="Usage polic">Usage policy</a> |
+		<a href="/blog" title="Blog">Blog</a>
 		<br>
-		<a href="/doodles" rel="nofollow" title="Doodles">Doodles</a> | 
-		<a href="/searchcloud" title="Search Cloud">Search Cloud</a> | 
-		<a href="/tags" title="Tag Cloud">Tag Cloud</a> | 
-		<a href="http://suprbay.org/" title="Forum" rel="nofollow" target="_blank">Forum</a> | 
+		<a href="/doodles" rel="nofollow" title="Doodles">Doodles</a> |
+		<a href="/searchcloud" title="Search Cloud">Search Cloud</a> |
+		<a href="/tags" title="Tag Cloud">Tag Cloud</a> |
+		<a href="http://suprbay.org/" title="Forum" rel="nofollow" target="_blank">Forum</a> |
 		<a href="http://bayfiles.com" title="Bayfiles" rel="nofollow" target="_blank">Bayfiles</a>
 		<br>
-		<a href="http://bayimg.com" title="BayImg" rel="nofollow" target="_blank">BayImg</a> | 
-		<a href="http://pastebay.com" title="PasteBay" rel="nofollow" target="_blank">PasteBay</a> | 
-		<a href="https://www.ipredator.se" title="IPREDator" rel="nofollow" target="_blank">IPREDator</a> | 
+		<a href="http://bayimg.com" title="BayImg" rel="nofollow" target="_blank">BayImg</a> |
+		<a href="http://pastebay.com" title="PasteBay" rel="nofollow" target="_blank">PasteBay</a> |
+		<a href="https://www.ipredator.se" title="IPREDator" rel="nofollow" target="_blank">IPREDator</a> |
 		<a href="https://www.facebook.com/ThePirateBayWarMachine" rel="nofollow" title="Follow TPB on Facebook" target="_blank">Follow TPB on Facebook</a>
 	</nav>
 	<div id="icons">
 		<br/><a href="http://www.kopimi.com/kopimi" rel="nofollow" target="_blank" title="Kopimi" class="sp kopimi"><span>Kopimi</span></a><br/><br/>
-		<center>Powered by <a href="http://piratskapartija.com">PiratskaPartija.com</a>- <a href="https://github.com/m0k1/tpbproxy">Get the Script</a></center><br>
+		<center>Powered by TPB PROXY SCRIPT - <a href="https://github.com/m0k1/tpbproxy">Get the Script</a></center><br>
 		<a href="/rss" title="RSS" class="sp rss"><span>RSS</span></a>
 	</div>
 </footer>
