--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 		<script src="/static/js/html5_for_ie.js"></script>
 	<![endif]-->
 	<link rel="stylesheet" href="/static/css5/main.css">
+	<script src="/static/js/tpb.js"></script>
 	<script>
 	function GetStatus()
 	{
@@ -113,6 +114,7 @@
 			<label title="Video" accesskey="w"><input name="video" id="video" onclick="rmAll();" type="checkbox">Video</label>
 			<label title="Applications" accesskey="e"><input name="apps" id="apps" onclick="rmAll();" type="checkbox">Applications</label>
 			<label title="Games" accesskey="r"><input name="games" id="games" onclick="rmAll();" type="checkbox">Games</label>
+			<label title="Porn" accesskey="t"><input name="porn" id="porn" onclick="rmAll();" type="checkbox">Porn</label>
 			<label title="Other" accesskey="y"><input name="other" id="other" onclick="rmAll();" type="checkbox">Other</label>
 		</p>
 		<p id="subm">
@@ -127,7 +129,6 @@
 		<div>
 			<a href="#close" title="Close" class="close">X</a>
 			<h2>TPB DOWN CHECK</h2>
-			<div id="xdiv"><p>x</p></div>
 			<p><button type="button" onclick="GetStatus()">REFRESH</button><p>
 		</div>
 	</div>
@@ -135,20 +136,11 @@
 <footer>
 	<nav>
 		<a href="/about" rel="nofollow" title="About">About</a> |
-		<a href="/legal" rel="nofollow" title="Legal threats">Legal threats</a> |
 		<a href="/policy" rel="nofollow" title="Usage polic">Usage policy</a> |
-		<a href="/blog" title="Blog">Blog</a>
-		<br>
+		<a href="/blog" title="Blog">Blog</a> |
 		<a href="/doodles" rel="nofollow" title="Doodles">Doodles</a> |
-		<a href="/searchcloud" title="Search Cloud">Search Cloud</a> |
-		<a href="/tags" title="Tag Cloud">Tag Cloud</a> |
-		<a href="http://suprbay.org/" title="Forum" rel="nofollow" target="_blank">Forum</a> |
-		<a href="http://bayfiles.com" title="Bayfiles" rel="nofollow" target="_blank">Bayfiles</a>
+		<a href="http://pirates-forum.org/" title="Forum" rel="nofollow" target="_blank">Forum</a>
 		<br>
-		<a href="http://bayimg.com" title="BayImg" rel="nofollow" target="_blank">BayImg</a> |
-		<a href="http://pastebay.com" title="PasteBay" rel="nofollow" target="_blank">PasteBay</a> |
-		<a href="https://www.ipredator.se" title="IPREDator" rel="nofollow" target="_blank">IPREDator</a> |
-		<a href="https://www.facebook.com/ThePirateBayWarMachine" rel="nofollow" title="Follow TPB on Facebook" target="_blank">Follow TPB on Facebook</a>
 	</nav>
 	<div id="icons">
 		<br/><a href="http://www.kopimi.com/kopimi" rel="nofollow" target="_blank" title="Kopimi" class="sp kopimi"><span>Kopimi</span></a><br/><br/>
