--- a/home.html
+++ b/home.html
@@ -129,6 +129,7 @@
 		<div>
 			<a href="#close" title="Close" class="close">X</a>
 			<h2>TPB DOWN CHECK</h2>
+			<div id="xdiv"><p>Checking ... Please Wait ...</p></div>
 			<p><button type="button" onclick="GetStatus()">REFRESH</button><p>
 		</div>
 	</div>
